<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">School App</string>

    <string name="action_settings">Ajustes</string>
    <string name="action_add_school">Añadir Colegio</string>
    <string name="action_modify">Modificar Datos</string>
    <string name="username_hint">Correo de Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="new_password_hint">Nueva Contraseña</string>
    <string name="old_password_hint">Vieja Contraseña</string>
    <string name="login_button_label">Acceder</string>
    <string name="sign_up_text">Registro</string>
    <string name="alumno">Alumno</string>
    <string name="teacher">Profesor</string>
    <string name="father">Madre/Padre/Tutor Legal</string>
    <string name="rol">Rol</string>
    <string name="teachers">Profesores</string>
    <string name="alumnos">Alumnos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="circulares">Circulares</string>
    <string name="Dates">Citas</string>
    <string name="send">Enviar</string>
    <string name="text_hint">Mensaje a enviar...</string>
    <string name="contactos">Contactos</string>
    <string name="asunto">Asunto</string>
    <string name="submit">Registrar</string>
    <string name="usertype_promt">Tipo de Usuaro</string>
    <string name="name">Nombre</string>
    <string name="myName">MiNombre</string>
    <string name="myRol">MiRol</string>
    <string name="lastname">Apellidos</string>
    <string name="college">Centro Escolar</string>
    <string name="telephone">Teléfono</string>
    <string name="letter">Letra</string>
    <string name="mail">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="course_group">Curso y Grupo</string>
    <string name="course_group_hint">1A, 2C, 3B...</string>
    <string name="alumno_data">**** Datos del Alumno ****</string>
    <string name="other_alumno_data">**** Datos de Otro Alumno ****</string>
    <string name="empty"></string>
    <string name="email">email</string>
    <string name="alumno_name">Nombre Alumno</string>
    <string name="alumno_lastname">Apellidos Alumno</string>
    <string name="alumno_telephone">Telefono Alumno</string>
    <string name="alumno_mail">E-Mail Alumno</string>
    <string name="alumno_course_group">Curso y Grupo Alumno</string>
    <string name="alumno_center">Centro Alumno</string>
    <string name="alu_course_group_hint">Curso y Grupo Alumno: 1A, 2C, 3B...</string>
    <string name="size">size</string>
    <string name="forget_login">Nueva Contraseña</string>
    <string name="reading_true">Leido</string>
    <string name="reading_false">No Leido</string>
    <string name="mail_remitter">mailRemitter</string>
    <string name="modify">Modificar</string>
    <string name="save">Guardar</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="save_password">Guardar Contraseña</string>
    <string name="back">Volver</string>
    <string name="load">Cargando...</string>
    <string name="add_school">Añadir Colegio...</string>
    <string name="select_school">Seleccionar Colegio</string>
    <string name="teacher_select_course">Seleccione uno de los cursos en los que da clase: </string>
    <string name="father_select_course">Seleccione uno de los cursos en los que tenga hijos: </string>
    <string name="father_number_children">Número de hijos: </string>
    <string name="add_children">Añadir hijos: </string>
    <string name="add_child">Añadir hijo </string>

    <string name="person">person</string>
    <string name="value">value</string>
    <string name="editText_class">class android.widget.LinearLayout</string>

    <string-array name="usertype_array">
        <item>Alumno</item>
        <item>Profesor</item>
        <item>Madre/Padre/Tutor Legal</item>
    </string-array>

    <!-- Roles -->
    <string name="rol_teacher">Profesor</string>
    <string name="rol_father">Padre</string>
    <string name="rol_student">Alumno</string>

    <!-- Etiquetas -->
    <string name="name_label">Nombre: </string>
    <string name="lastname_label">Apellidos: </string>
    <string name="college_label">Centro: </string>
    <string name="telephone_label">Teléfono: </string>
    <string name="mail_label">E-mail: </string>
    <string name="course_group_label">Curso y Grupo: </string>
    <string name="teacher_class_label">Cursos y Grupos: </string>
    <string name="sons_label">Hijos: </string>
    <string name="son_label">Hijo</string>

    <!-- Claves para la BBDD -->
    <string name="bbdd_mail">mail</string>
    <string name="bbdd_name">nombre</string>
    <string name="bbdd_lastname">apellido</string>
    <string name="bbdd_center">centro</string>
    <string name="bbdd_telephone">telefono</string>
    <string name="bbdd_rol">rol</string>
    <string name="bbdd_class">clase</string>
    <string name="bbdd_teacher_class">clases</string>
    <string name="bbdd_father_alumno">alumnos</string>
    <string name="bbdd_children">hijos</string>
    <string name="bbdd_name_children">nombreHijo</string>
    <string name="bbdd_lastname_children">apellidoHijo</string>
    <string name="bbdd_addressee">destinatario</string>
    <string name="bbdd_mail_remitter">mail_remitente</string>
    <string name="bbdd_message">mensaje</string>
    <string name="bbdd_remitter">remitente</string>
    <string name="bbdd_date">fecha</string>
    <string name="bbdd_date_day">dia</string>
    <string name="bbdd_date_month">mes</string>
    <string name="bbdd_date_year">anno</string>
    <string name="bbdd_date_hour">hora</string>
    <string name="bbdd_date_minutes">minutos</string>
    <string name="bbdd_system">System</string>
    <string name="bbdd_rol_remitter">rol_remitente</string>
    <string name="bbdd_schools">colegios</string>
    <string name="exist">exist</string>
    <string name="key">key</string>
    <!-- FIN BBDD -->

    <string name="help_dialog_title">Ayuda sobre Curso y Grupo</string>
    <string name="help_ok_dialog">Aceptar</string>

    <string-array name="tabs_array">
        <item>Registro</item>
        <item>Acceso</item>
        <item>Ayuda</item>
        <item>Sobre Mi</item>
    </string-array>

    <!-- My Data -->
    <string name="my_name">Gonzalo J. García Martín</string>
    <string name="my_email">alu0100403619@ull.edu.es</string>
    <string name="my_telephone">654132662</string>
    <string name="my_adress">C// Estado de Aragua, Nº 5, 1º. La Laguna</string>
    <string name="my_school">Escuela Técnica Superior de Ingenierías y Tecnologías</string>
    <string name="my_studies">Ingeniería Informática</string>

    <!-- Tabs' Titles -->
    <string name="tab_alumnos">Mi Clase</string>
    <string name="tab_teachers_alumnos">Mis Alumnos</string>
    <string name="tab_alumnos_teachers">Mis Profesores</string>
    <string name="tab_teachers">Profesores</string>
    <string name="tab_fathers">Padres</string>
    <string name="tab_notifications">Notificaciones Nuevas</string>

    <!-- ActionBar's Titles -->
    <string name="ActionBar_alumno">Rol: Alumno</string>
    <string name="ActionBar_teacher">Rol: Profesor</string>
    <string name="ActionBar_father">Rol: Padre/Madre/Tutor Legal</string>

    <!-- Activity's Titles -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_alumno_tab">AlumnoTabActivity</string>
    <string name="title_activity_circulares">CircularesActivity</string>
    <string name="title_activity_teachers_tab">TeachersTabActivity</string>
    <string name="title_activity_expandable_teachers">ExpandableTeachersActivity</string>
    <string name="title_activity_expandable_fahters">ExpandableFahtersActivity</string>
    <string name="title_activity_expandable_alumnos">ExpandableAlumnosActivity</string>
    <string name="title_activity_fathers_tab">FathersTabActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_father_expandable_father">FatherExpandableFatherActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_image_description">Imagen de Bienvenida</string>
    <string name="title_activity_data">Datos de Contacto</string>
    <string name="title_activity_chat_2">ChatActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_my_data">MyDataActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>

    <!-- Tabs Title -->
    <string name="welcomeTab">Bienvenido</string>
    <string name="helpTab">Ayuda</string>
    <string name="aboutMeTab">Sobre Mi</string>
    <string name="title_activity_register_student">RegisterStudentActivity</string>

    <string name="title_activity_register_teacher">RegisterTeacherActivity</string>
    <string name="title_activity_register_father">RegisterFatherActivity</string>
    <string name="title_activity_add_child">AddChildActivity</string>

</resources>
