<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView android:id="@+id/scrollAboutMe"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout android:id="@+id/scrollChild"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:id="@+id/image_text"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView android:src="@drawable/me" android:id="@+id/me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView android:id="@+id/empty"
                    android:layout_width="10dp" android:text="@string/empty"
                    android:layout_height="fill_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/about_me_message"
                    android:id="@+id/info" />

            </LinearLayout>

            <LinearLayout android:id="@+id/empty_linearLayout"
                android:layout_width="fill_parent" android:orientation="horizontal"
                android:layout_height="20dp"
                android:layout_below="@+id/image_text"></LinearLayout>

            <LinearLayout android:id="@+id/my_info"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_linearLayout">

                <TextView android:id="@+id/name" android:text="@string/my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_person"/>

                <TextView android:id="@+id/email" android:text="@string/my_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_email"/>

                <TextView android:id="@+id/telephone" android:text="@string/my_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_phone"/>

                <TextView android:id="@+id/adress" android:text="@string/my_adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_home"/>

                <TextView android:id="@+id/school" android:text="@string/my_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_university_filled"/>

                <TextView android:id="@+id/studies" android:text="@string/my_studies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_student"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>