<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gonzalo.schoolapp.RegisterActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fillViewport="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/rol"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="47dp">
            <TextView android:id="@+id/label_spinner_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rol"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/spinner_1"
                android:entries="@array/usertype_array"
                android:prompt="@string/usertype_promt"
                android:layout_alignParentTop="true"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/name"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="47dp">
                <!-- TODO Convertir los textviews de estos bloques en un icono -->
                <TextView android:id="@+id/label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>
                <EditText android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/lastname"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="47dp">
                <TextView android:id="@+id/label_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"/>
                <EditText android:id="@+id/text_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/tlephone"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="47dp">
                <TextView android:id="@+id/label_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone"/>
                <EditText android:id="@+id/text_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telephone"
                    android:inputType="phone"
                    android:ems="10"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/college"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="47dp">
                <TextView android:id="@+id/label_college"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college"/>
                <EditText android:id="@+id/text_college"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/college" />
            </LinearLayout>

            <LinearLayout android:id="@+id/course_group"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="47dp">
                <TextView android:id="@+id/label_course_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_group"/>
                <EditText android:id="@+id/text_course_group"
                    android:layout_width="226dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_group_hint"
                    android:inputType="text" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:src="@drawable/ic_action_help"
                    android:onClick="launchHelpToast"
                    android:contentDescription="Help" />
            </LinearLayout>

            <!-- Datos del Alumno -->
            <LinearLayout android:id="@+id/alumno_data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty" android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alumno_data" android:layout_gravity="center_horizontal"/>

                <LinearLayout android:id="@+id/alu_name"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="47dp">
                    <TextView android:id="@+id/label_alu_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alumno_name"/>
                    <EditText android:id="@+id/text_alu_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alumno_name"
                        android:inputType="textPersonName"/>
                </LinearLayout>

                <LinearLayout android:id="@+id/alu_lastname"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="47dp">
                    <TextView android:id="@+id/label_alu_lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alumno_lastname"/>
                    <EditText android:id="@+id/text_alu_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alumno_lastname"
                        android:inputType="textPersonName"/>
                </LinearLayout>

                <LinearLayout android:id="@+id/alu_center"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="47dp">
                    <TextView android:id="@+id/label_alu_center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alumno_center"/>
                    <EditText android:id="@+id/text_alu_center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alumno_center"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout android:id="@+id/alu_course_group"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="47dp">
                    <TextView android:id="@+id/label_alu_course_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alumno_course_group"/>
                    <EditText android:id="@+id/text_alu_course_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/course_group_hint"
                        android:inputType="text"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
            <!-- Datos del Alumno -->

            <LinearLayout android:id="@+id/mail"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="47dp">
                <TextView android:id="@+id/label_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"/>
                <EditText android:id="@+id/text_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"/>
            </LinearLayout>

            <LinearLayout android:id="@+id/password"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="47dp">
                <TextView android:id="@+id/label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
                <EditText android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
            </LinearLayout>

            <Button android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center_horizontal"
                android:onClick="submit" />
        <!-- Fin del LinearLayout y del ScrollView -->
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
